# get_minecraft_server

./: .gitignore  README.md  myproject.toml  pyproject.toml  requirements.txt
get_minecraft_server/: get_server.py  get_version.py
