[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_git_versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "get_minecraft_server"
dynamic = ["version"]
authors = [
    { name="Mathieu Marchand", email="meuch13ps@gmail.com" },
]
description = "Get the current java minecraft server version and download links"
requires-python = ">=3.9"
classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
]
dependencies = [
    'bs4',
    'requests'
]

[project.scripts]
get_server = "get_minecraft_server.get_server:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools-git-versioning]
enabled = true

[distutils]
index-servers = [
    "gitlab"]

[gitlab]
repository = "https://gitlab.bell.ca/api/v4/projects/24131/packages/pypi"
username = "gitlab-ci-token"
password = "test"